--- a/main.css
+++ b/main.css
@@ -14,3 +14,13 @@
 /*.clearfix {display: block;}*/
 /* End hide from IE-mac */
 
+body {
+    background: black;
+}
+.container {
+    background: black;
+}
+.crypto img {
+    width: 50px;
+    height: 50px;
+}
