can now render sparklines

--- a/main.css
+++ b/main.css
@@ -15,10 +15,10 @@
 /* End hide from IE-mac */
 
 body {
-    background: black;
+    /*background: black;*/
 }
 .container {
-    background: black;
+    /*background: #040F7B;*/
 }
 .crypto img {
     width: 50px;
